# LPP

./: .gitignore  LICENSE  README.md
cmake/: cross-mingw32-linux.cmake
ide/: CMakeLists.txt  lpp_conf.cpp  lpp_conf.h  lpp_editor.cpp  lpp_editor.h  lpp_highlighter.cpp  lpp_highlighter.h  lpp_interp_ctrl.cpp  lpp_interp_ctrl.h  lpp_interp_ctrl_linux.cpp  lpp_interp_ctrl_win.cpp  lpp_lexer.re  lpp_res.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
interp/: CMakeLists.txt  lpp_ast.cpp  lpp_ast.h  lpp_exception.cpp  lpp_exception.h  lpp_filemanager.cpp  lpp_filemanager.h  lpp_interp.cpp  lpp_interp.h  lpp_lexer.cpp  lpp_lexer.h  lpp_parser.cpp  lpp_parser.h  lpp_proc_info.cpp  lpp_proc_info.h  lpp_runtime.cpp  lpp_runtime.h  lpp_sem_analysis.cpp  lpp_serializer.cpp  lpp_serializer.h  lpp_symb_table.cpp  lpp_symb_table.h  lpp_terminal.cpp  lpp_terminal.h  lpp_terminal_linux.cpp  lpp_terminal_win.cpp  lpp_tokens.h  lpp_type_info.cpp  lpp_type_info.h  lpp_types.h  lpp_variant.cpp  lpp_variant.h  main.cpp  main_term.cpp  str_util.h
test_interp/: CMakeLists.txt  lpp_filemanager.cpp  lpp_sources.h  lpp_terminal.cpp  main.cpp  serializer_helper.cpp  serializer_helper.h  test_file.cpp  test_main.cpp  test_serializer.cpp
